// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throws if an expression can be inferred to always be falsy 1`] = `
"undefined: Expression statement in assertion is always falsy
  1 | import assert from 'power-assert';
  2 |       const x = 0;
> 3 |       expect: x === 1;
    |               ^"
`;

exports[`throws if an expression can be inferred to always be truthy 1`] = `
"undefined: Expression statement in assertion is always truthy
  1 | import assert from 'power-assert';
  2 |       const x = 1;
> 3 |       expect: x === 1;
    |               ^"
`;
